--- a/portafolio.html
+++ b/portafolio.html
@@ -3,38 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
     <link
       rel="stylesheet"
       href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css"
     />
+    <link rel="stylesheet" href="css/main.min.css" />
     <title>Portafolio</title>
   </head>
   <body>
-    <header class="top-line">
+    <header class="page-header">
       <div class="container">
-        <nav>
-          <p class="logo-top logo"><a href="index.html">WebStudio</a></p>
-          <ul class="menu-nav">
-            <li><a href="studio.html" target="_parent">Estudios</a></li>
-            <li><a href="portafolio.html" target="_parent">Portafolio</a></li>
-            <li><a href="#">Contacto</a></li>
+        <nav class="navbar">
+          <p class="logo page-header__logo">
+            <a class="logo__link" href="index.html">WebStudio</a>
+          </p>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a class="navbar__link" href="studio.html" target="_parent"
+                >Estudios</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a class="navbar__link" href="portafolio.html" target="_parent"
+                >Portafolio</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a class="navbar__link" href="#">Contacto</a>
+            </li>
           </ul>
         </nav>
-        <ul class="contacts-menu">
-          <li>
-            <a href="#" class="item-contact">
-              <svg class="email icon-contact">
-                <use href="/images/svg/sprite.svg#email"></use>
+        <ul class="contact ">
+          <li class="contact__item">
+            <a href="#" class="contact__link">
+              <svg class="contact__icon contact__email">
+                <use href="images/svg/sprite.svg#email"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li>
-            <a href="#" class="item-contact">
-              <svg class="smartphone icon-contact">
-                <use href="/images/svg/sprite.svg#smartphone"></use>
+          <li class="contact__item">
+            <a href="#" class="contact__link">
+              <svg class="contact__icon contact__smarphone">
+                <use href="images/svg/sprite.svg#smartphone"></use>
               </svg>
               +52 55 5529 6000
             </a>
@@ -44,27 +56,27 @@
     </header>
     <main>
       <section class="portafolio">
-        <nav class="menu-second">
-          <ul>
-            <li><button class="buttons" type="button">Todos</button></li>
-            <li><button class="buttons" type="button">Sitio Web</button></li>
-            <li><button class="buttons" type="button">Aplicaciones</button></li>
-            <li><button class="buttons" type="button">Diseño</button></li>
-            <li><button class="buttons" type="button">Marketing</button></li>
+        <nav class="menu">
+          <ul class="menu__container">
+            <li class="menu__item"><button class="menu__button buttons" type="button">Todos</button></li>
+            <li class="menu__item"><button class="menu__button buttons" type="button">Sitio Web</button></li>
+            <li class="menu__item"><button class="menu__button buttons" type="button">Aplicaciones</button></li>
+            <li class="menu__item"><button class="menu__button buttons" type="button">Diseño</button></li>
+            <li class="menu__item"><button class="menu__button buttons" type="button">Marketing</button></li>
           </ul>
         </nav>
 
-        <ul class="galery">
-          <li>
+        <ul class="gallery">
+          <li class="gallery__item">
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/tecnoduck.jpg"
                   alt="tecnoduck"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p class="card__text">
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -72,22 +84,22 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Tecnoduck</h4>
-                <p>Sitio Web</p>
+              <div class="card__body">
+                <h4 class="card__tittle">Tecnoduck</h4>
+                <p class="card__description">Sitio Web</p>
               </div>
             </div>
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/poster-neworleans-goldenstar.jpg"
                   alt="Poster new orleans vs estrellas doradas"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p class="card__text">
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -95,22 +107,22 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Póster de Nueva Orleans vs</h4>
-                <h4>Estrella Dorada Diseño</h4>
+              <div class="card__body">
+                <h4 class="card__tittle">Póster de Nueva Orleans vs</h4>
+                <h4 class="card__tittle">Estrella Dorada Diseño</h4>
               </div>
             </div>          
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/restaurant-Seafood.jpg"
                   alt="Restaurante Seafood"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p class="card__text">
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -118,22 +130,22 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Restaurante Seafood</h4>
-                <p>Aplicaciones</p>
+              <div class="card__body">
+                <h4 class="card__tittle">Restaurante Seafood</h4>
+                <p class="card__description">Aplicaciones</p>
               </div>
             </div>            
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                 src="images/images-portafolio/project-prime.jpg"
                 alt="Proyecto Prime"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p class="card__text">
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -141,22 +153,22 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Proyecto Prime</h4>
-                <p>Marketing</p>
+              <div class="card__body">
+                <h4 class="card__tittle">Proyecto Prime</h4>
+                <p class="card__description">Marketing</p>
               </div>
             </div>            
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/project-boxes.jpg"
                   alt="Proyecto Cajas"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p class="card__text">
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -164,22 +176,22 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Proyecto Cajas</h4>
-                <p>Aplicaciones</p>
+              <div class="card__body">
+                <h4 class="card__tittle">Proyecto Cajas</h4>
+                <p class="card__description">Aplicaciones</p>
               </div>
             </div>             
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/inspiration.jpg"
                   alt="PC all in one"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p >
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -187,21 +199,21 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>La inspiracion no tiene limites</h4>
-                <p>Sitio Web</p>
+              <div class="card__body">
+                <h4 class="card__tittle">La inspiracion no tiene limites</h4>
+                <p class="card__description">Sitio Web</p>
               </div>
             </div>            
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                 src="images/images-portafolio/limited-edition.jpg"
                 alt="Edicion Limitada"
                   width="370px"
                 />
-                <div class="card-animation">
+                <div class="card__animation">
                   <p>
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
@@ -210,21 +222,21 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Edición Limitada</h4>
-                <p>Diseño</p>
+              <div class="card__body">
+                <h4 class="card__tittle">Edición Limitada</h4>
+                <p class="card__description">Diseño</p>
               </div>
             </div>             
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/project-lab.jpg"
                   alt="Proyecto LAB"
                   width="370px"
                 />
-                <div class="card-animation">
+                <div class="card__animationn">
                   <p>
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
@@ -233,22 +245,22 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Proyecto LAB</h4>
-                <p>Marketing</p>
+              <div class="card__body">
+                <h4 class="card__tittlle">Proyecto LAB</h4>
+                <p card="card__description">Marketing</p>
               </div>
             </div>             
           </li>
           <li>
             <div class="card">
-              <div class="card-image">
+              <div class="card__image">
                 <img
                   src="images/images-portafolio/growth-business.jpg"
                   alt="Negocio en Crecimiento"
                   width="370px"
                 />
-                <div class="card-animation">
-                  <p>
+                <div class="card__animation">
+                  <p class="card__text">
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
                     para el espionaje digital y los ataques a los servidores
@@ -256,65 +268,87 @@
                   </p>
                 </div>
               </div>
-              <div class="card-body">
-                <h4>Negocio en Crecimiento</h4>
-                <p>Aplicaciones</p>
+              <div class="card__body">
+                <h4 class="card__tittle">Negocio en Crecimiento</h4>
+                <p class="card__description">Aplicaciones</p>
               </div>
             </div>             
           </li>
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="page-footer">
       <div class="container">
         <div>
-          <p class="logo-down logo"><a href="index.html">WebStudio</a></p>
+          <p class="page-footer__logo logo">
+            <a class="logo__link" href="index.html">WebStudio</a>
+          </p>
           <address>
-            <ul>
-              <li><p class="direction">Ticomán 500,</p></li>
-              <li><p class="direction">Ciudad de México, CDMX, México</p></li>
-              <li><p class="direction">info@example.com</p></li>
-              <li><p class="direction">+52 55 5529 6000</p></li>
+            <ul class="addres">
+              <li class="addres__item">
+                <p class="addres__description">Ticomán 500,</p>
+              </li>
+              <li class="addres__item">
+                <p class="addres__description">
+                  Ciudad de México, CDMX, México
+                </p>
+              </li>
+              <li class="addres__item">
+                <p class="addres__description">info@example.com</p>
+              </li>
+              <li class="addres__item">
+                <p class="addres__description">+52 55 5529 6000</p>
+              </li>
             </ul>
           </address>
         </div>
-        <div>
-          <h4>ENCUENTRENOS EN</h4>
-          <ul class="social-media">
-            <li>
+
+        <div class="find-us">
+          <h4 class="find-us__tittle">ENCUENTRENOS EN</h4>
+          <ul class="social">
+            <li class="social_item">
               <img
                 src="images/images-portafolio/instagram.jpg"
                 alt="Logo de instagram"
               />
             </li>
-            <li>
+            <li class="social_item">
               <img
                 src="images/images-portafolio/twiter.jpg"
                 alt="Logo de Twiter"
               />
             </li>
-            <li>
+            <li class="social_item">
               <img
                 src="images/images-portafolio/facebook.jpg"
                 alt="Logo de Facebook"
               />
             </li>
-            <li><img src="images/images-portafolio/linkedin.jpg" alt="" /></li>
+            <li class="social_item">
+              <img src="images/images-portafolio/linkedin.jpg" alt="" />
+            </li>
           </ul>
         </div>
+
         <div class="subscription">
-          <h4 class="subscription__tittle">SUSCRÍBASE AL BOLETÍN INFORMATIVO</h4>
-          <form class="subscription__form"action="">            
+          <h4 class="subscription__tittle">
+            SUSCRÍBASE AL BOLETÍN INFORMATIVO
+          </h4>
+          <form class="subscription__form" action="">
             <div class="subscription__imgbutton">
-              <input class="subscription__email" type="email" placeholder="Correo Electrónico">
+              <input
+                class="subscription__email"
+                type="email"
+                placeholder="Correo Electrónico"
+              />
               <button class="subscription__button">Suscribase</button>
               <svg class="subscription__icon">
                 <use href="images/svg/sprite.svg#send"></use>
               </svg>
-            </div>            
+            </div>
           </form>
         </div>
       </div>
-    </footer> 
+    </footer>
   </body>
 </html>
