--- a/portafolio.html
+++ b/portafolio.html
@@ -236,7 +236,7 @@
                   alt="Proyecto LAB"
                   width="370px"
                 />
-                <div class="card__animationn">
+                <div class="card__animation">
                   <p>
                     Tecnoduck es una plataforma de distribución de coronavirus
                     de última generación. Las compañías usan esta plataforma
@@ -246,7 +246,7 @@
                 </div>
               </div>
               <div class="card__body">
-                <h4 class="card__tittlle">Proyecto LAB</h4>
+                <h4 class="card__tittle">Proyecto LAB</h4>
                 <p card="card__description">Marketing</p>
               </div>
             </div>             
